Bug 460636 - Sonar: change Integer Instantiation to Integer.valueOf
Change-Id: I11a13d774fbff6731689cc4dcd80f23f67c09b81
Signed-off-by: <gautier.desaintmartinlacaze@gmail.com>