@@ -292,7 +292,7 @@ class RenameAnalyzeUtil {
 		Map updatedOldOffsets= getUpdatedChangeOffsets(change, oldMatches);
 		for (int i= 0; i < newMatches.length; i++) {
 			SearchMatch newMatch= newMatches[i];
-			Integer offsetInNew= new Integer(newMatch.getOffset());
+			Integer offsetInNew= Integer.valueOf(newMatch.getOffset());
 			SearchMatch oldMatch= (SearchMatch) updatedOldOffsets.remove(offsetInNew);
 			if (oldMatch == null) {
 				addReferenceShadowedError(cu, newMatch, newElementName, result);
@@ -311,9 +311,9 @@ class RenameAnalyzeUtil {
 		Map oldToUpdatedOffsets= getEditChangeOffsetUpdates(change);
 		for (int i= 0; i < oldMatches.length; i++) {
 			SearchMatch oldMatch= oldMatches[i];
-			Integer updatedOffset= (Integer) oldToUpdatedOffsets.get(new Integer(oldMatch.getOffset()));
+			Integer updatedOffset= (Integer) oldToUpdatedOffsets.get(Integer.valueOf(oldMatch.getOffset()));
 			if (updatedOffset == null)
-				updatedOffset= new Integer(-1); //match not updated
+				updatedOffset= Integer.valueOf(-1); //match not updated
 			updatedOffsets.put(updatedOffset, oldMatch);
 		}
 		return updatedOffsets;
@@ -332,7 +332,7 @@ class RenameAnalyzeUtil {
 			if (updatedRegion == null)
 				continue;
 			
-			offsetUpdates.put(new Integer(oldRegion.getOffset()), new Integer(updatedRegion.getOffset()));
+			offsetUpdates.put(Integer.valueOf(oldRegion.getOffset()), Integer.valueOf(updatedRegion.getOffset()));
 		}
 		return offsetUpdates;
 	}
