@@ -47,11 +47,11 @@ public class VisibilityControlUtil {
 			"pri&vate" //$NON-NLS-1$
 		};
 		Integer[] data= new Integer[] {
-					new Integer(Modifier.PUBLIC),
-					new Integer(Modifier.PROTECTED),
-					new Integer(Modifier.NONE),
-					new Integer(Modifier.PRIVATE)};
-		Integer initialVisibility= new Integer(correctVisibility);
+					Integer.valueOf(Modifier.PUBLIC),
+					Integer.valueOf(Modifier.PROTECTED),
+					Integer.valueOf(Modifier.NONE),
+					Integer.valueOf(Modifier.PRIVATE)};
+		Integer initialVisibility= Integer.valueOf(correctVisibility);
 		for (int i= 0; i < labels.length; i++) {
 			Button radio= new Button(group, SWT.RADIO);
 			Integer visibilityCode= data[i];
@@ -72,7 +72,7 @@ public class VisibilityControlUtil {
 	private static List convertToIntegerList(int[] array) {
 		List result= new ArrayList(array.length);
 		for (int i= 0; i < array.length; i++) {
-			result.add(new Integer(array[i]));
+			result.add(Integer.valueOf(array[i]));
 		}
 		return result;
 	}
