@@ -62,7 +62,7 @@ public class MultiStateCellEditor extends CellEditor {
 	 * @return the Integer value
 	 */
 	protected Object doGetValue() {
-		return new Integer(fValue);
+		return Integer.valueOf(fValue);
 	}
 
 	/*
