@@ -287,12 +287,12 @@ public class JavaParameterListValidator implements IContextInformationValidator,
 		final int length= code.length();
 	    int pos= 0;
 		List positions= new ArrayList();
-		positions.add(new Integer(-1));
+		positions.add(Integer.valueOf(-1));
 		while (pos < length && pos != -1) {
 			char ch= code.charAt(pos);
 			switch (ch) {
 	            case ',':
-		            positions.add(new Integer(pos));
+		            positions.add(Integer.valueOf(pos));
 		            break;
 	            case '<':
 	            	pos= code.indexOf('>', pos);
@@ -306,7 +306,7 @@ public class JavaParameterListValidator implements IContextInformationValidator,
 			if (pos != -1)
 				pos++;
 		}
-		positions.add(new Integer(length));
+		positions.add(Integer.valueOf(length));
 		
 		int[] fields= new int[positions.size()];
 		for (int i= 0; i < fields.length; i++)
