@@ -306,7 +306,7 @@ public final class ConfigureWorkingSetAssignementAction extends SelectionDispatc
 					if (!modelElement.isGrayed())
 						return superText;
 					
-					return superText + Messages.format(WorkingSetMessages.ConfigureWorkingSetAssignementAction_XofY_label, new Object[] {new Integer(modelElement.getCheckCount()), new Integer(fElements.length)});
+					return superText + Messages.format(WorkingSetMessages.ConfigureWorkingSetAssignementAction_XofY_label, new Object[] {Integer.valueOf(modelElement.getCheckCount()), Integer.valueOf(fElements.length)});
 				}
 			};
 		}	
@@ -435,7 +435,7 @@ public final class ConfigureWorkingSetAssignementAction extends SelectionDispatc
 			}
 			dialog.setMessage(Messages.format(WorkingSetMessages.ConfigureWorkingSetAssignementAction_DialogMessage_specific, elementName));
 		} else {
-			dialog.setMessage(Messages.format(WorkingSetMessages.ConfigureWorkingSetAssignementAction_DialogMessage_multi, new Integer(elements.length)));
+			dialog.setMessage(Messages.format(WorkingSetMessages.ConfigureWorkingSetAssignementAction_DialogMessage_multi, Integer.valueOf(elements.length)));
 		}
 		if (dialog.open() == Window.OK) {
 			updateWorkingSets(dialog.getSelection(), dialog.getGrayed(), elements);
